# corollary

parser-haskell/: Cargo.toml  build.rs
parser-haskell/src/: haskell.lalrpop  lib.rs  trans.rs  util.rs  whitespace.rs
