[package]
name = "parser-haskell"
version = "0.2.0"
authors = [
  "Tim Ryan <tim@timryan.org>",
  "Paul Collier <paul@paulcollier.ca>"
]
description = "Parses Haskell into an AST."
repository = "http://github.com/tcr/corrode-but-in-rust"
homepage = "http://github.com/tcr/corrode-but-in-rust"
license = "MIT/Apache-2.0"
edition = "2021"

[build-dependencies.lalrpop]
version = "0.22"

[dependencies]
lalrpop-util = {version = "0.22", features = ["lexer"] }
regex = "1.11"
base64 = "0.22"
errln = "0.1.0"
